[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Gate.gd" type="Script" id=1]
[ext_resource path="res://Assets/iso_tiles.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=1]

[node name="Gate" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, 16 )
polygon = PoolVector2Array( 0, -8, 16, 0, 0, 8, -16, 0 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.470588 )
position = Vector2( 0, 8 )
texture = ExtResource( 2 )
hframes = 4
vframes = 4
frame = 10

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = -16.0
margin_top = -19.0
margin_right = 17.0
margin_bottom = -5.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_right = 33.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TerminalLabel" type="Label" parent="PanelContainer/HBoxContainer"]
margin_right = 8.0
margin_bottom = 14.0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConcourseLabel" type="Label" parent="PanelContainer/HBoxContainer"]
margin_left = 12.0
margin_right = 21.0
margin_bottom = 14.0
text = "A"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumberLabel" type="Label" parent="PanelContainer/HBoxContainer"]
margin_left = 25.0
margin_right = 33.0
margin_bottom = 14.0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
